--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
-﻿<html>
-<head>
-<title>Fire Emblem Fates PMU Generator</title>
-</head>
+<!DOCTYPE html>
+<html>
 <body>
-<p>Fire Emblem Fates PMU Generator
-
-<applet code="FEFatesPMUGUI.class" width=500 height=500>
-</applet>
-
+<h1>FEFatesPMUGUI</h1>
+<p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
